syntax = "proto3";
package outer;
option  go_package = "/outer";


// 麻将 花色
enum ColorType {
    CardUnknown = 0;
    Wan         = 1; // 萬
    Tiao        = 2; // 条
    Tong        = 3; // 筒
}

// 麻将-血战到底 游戏状态机
enum MahjongBTEState {
    BETStateReady        = 0;   // 准备中状态
    BETStateDecideMaster = 1;   // 定庄
    BETStateDeal         = 2;   // 游戏开始发牌状态
    BETStateExchange3    = 3;   // 换三张状态
    BETStateDecideIgnore = 4;   // 定缺状态
    BETStatePlaying      = 5;   // 游戏状态
    BETStateSettlement   = 6;   // 结算
}


// 行动类型
enum ActionType {
    ActionPass        = 0; // 过
    ActionPong        = 1; // 碰
    ActionGang        = 2; // 杠
    ActionHu          = 3; // 胡
    ActionPlayCard    = 4; // 出牌
}

// 胡牌类型
enum HuType {
    HuTypeUnknown = 0;  // 未胡牌
    Hu            = 1;  // 平胡
    DuiDuiHu      = 2;  // 对对胡
    QingYiSe      = 3;  // 清一色
    QingDui       = 4;  // 清对
    JiangDui      = 5;  // 将对
    QiDui         = 6;  // 七对
    LongQiDui     = 7;  // 龙七对
    QingQiDui     = 8;  // 清七对
    JiangQiDui    = 9;  // 将七对
    QingLongQiDu  = 10; // 清龙七对
    QuanYaoJiu    = 11; // 全幺九
    MenQing       = 12; // 门清
    ZhongZhang    = 13; // 中张
    JiaXinWu      = 14; // 夹心五
}

// 额外番
enum ExtraType {
    ExtraInvalid  = 0;
    GangShangHua  = 1;  // 杠上开花
    GangShangPao  = 2;  // 杠上炮
    QiangGangHu   = 3;  // 抢杠胡
    ShaoDiHu      = 4;  // 扫底胡
    JinGouGou     = 5;  // 金钩胡
    HaiDiPao      = 6;  // 海底炮
    TianHu        = 7;  // 天胡
    Dihu          = 8;  // 地胡
}

